[package]
name = "index-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
candid = "0.9"
ic-agent = "0.30"
mongodb = { version = "2.8", features = ["tokio-runtime"] }
futures = "0.3"
futures-util = "0.3"
tokio = { version = "1.37", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
log4rs = "1.2"
hex = "0.4"
num-traits = "0.2"
config = "0.13"
chrono = "0.4"
warp = "0.3"
lazy_static = "1.5.0"
